[package]
name = "matrix-moderator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aho-corasick = "1.0.1"
clap = { version = "4.2.4", features = ["derive"] }
matrix-sdk = { version = "0.6.2", features = ["sso-login"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["full"] }
tracing-subscriber = "0.3.17"
url = "2.3.1"
